# Commander

./: .commander.json  .dockerignore  .editorconfig  .env.example  .eslintignore  .gitignore  .npmignore  .npmrc  .prettierignore  ACADEMIC_FIX_PLAN.md  AGENTS.md  ARCHITECTURE.md  ARENA.md  BENCHMARK.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMANDER_MODE_EVALUATION.md  COMMANDER_MODULE_AUDIT.md  COMMANDER_TASK_PACKAGES.md  COMMANDER_TASK_PACKAGES_HARD_TO_EASY.md  COMPARISON.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  COPYRIGHT.md  ENTERPRISE_READINESS.md  GAP_TRACKER.md  LICENSE  PRINCIPLES.md  PROJECT.md  README-ja.md  README-zh.md  README.md  REAUDIT_CORRECTIONS.md  REPORT.md  RESEARCH.md  RESEARCH_DEMO.md  SECURITY.md  SELF_DIAGNOSIS.md  SILENT_KILLERS_AUDIT.md  (+35 more)
.codex/: run.sh
.commander/: .commit-msg-format-sweep.txt  .commit-msg-prepush-protocol.txt  .commit-msg-prettier-fix.txt  .commit-msg-test-fixes.txt  approval-mode.json  topology-calibration.json  webhooks.json
.compare-capability-output/: comparative-analysis.json  comparison-summary.json  multi-angle-research.json  multi-step-workflow.json  parallel-code-review.json  synthesis-quality.json  tool-orchestration.json
.compare-three-output/: comparison-summary.json
.githooks/: pre-commit  (+1 more)
talktome/: Cargo.toml
talktome/src/: commands.rs  lib.rs  main.rs
talktome/src/api/: mod.rs
talktome/src/ingest/: mod.rs
talktome/src/llm/: mod.rs
talktome/src/model/: mod.rs
talktome/src/sources/: local_file.rs  mod.rs  telegram.rs  twitter.rs
talktome/src/store/: mod.rs
talktome/web/: index.html
(+1892 files in other folders)
