[package]
name = "talktome"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Crypto for encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
shellexpand = "3"
hex = "0.4"

# HTTP client for LLM
reqwest = { version = "0.12", features = ["json"] }
